.metadata/.plugins/org.eclipse.cdt.ui/clase_9.build.log
20:06:58 **** Incremental Build of configuration Debug for project clase_9 ****
make all 
Building file: ../src/clase_9.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/clase_9.d" -MT"src/clase_9.o" -o "src/clase_9.o" "../src/clase_9.c"
../src/clase_9.c: In function ‘main’:
../src/clase_9.c:36:3: warning: implicit declaration of function ‘gets’ [-Wimplicit-function-declaration]
   gets(vecAgenda[i].nombre);
   ^~~~
../src/clase_9.c: In function ‘funcMenu’:
../src/clase_9.c:59:2: error: stray ‘\342’ in program
  ​{
  ^
../src/clase_9.c:59:3: error: stray ‘\200’ in program
  ​{
   ^
../src/clase_9.c:59:4: error: stray ‘\213’ in program
  ​{
    ^
make: *** [src/clase_9.o] Error 1
src/subdir.mk:18: fallo en las instrucciones para el objetivo 'src/clase_9.o'
"make all" terminated with exit code 2. Build might be incomplete.

20:06:58 Build Failed. 5 errors, 1 warnings. (took 357ms)

